<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    tools:context=".PDFCreateActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp">

            <info.hoang8f.widget.FButton
                android:text="@string/cancel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/baseline_close_white_48"
                fbutton:fButtonColor="#2ecc71"
                android:textColor="#ecf0f1"
                fbutton:shadowEnabled="true"
                android:paddingRight="10dp"
                android:layout_weight="1.0"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:id="@+id/pdf_cancel_button" />

            <info.hoang8f.widget.FButton
                android:text="@string/pdf_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_shortcut_done"
                fbutton:fButtonColor="#2ecc71"
                android:textColor="#ecf0f1"
                fbutton:shadowEnabled="true"
                android:paddingRight="10dp"
                android:layout_weight="1.0"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:id="@+id/pdf_button" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="1dp"
                android:text="@string/file_name_label" />

            <EditText
                android:id="@+id/file_prefix_edit_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <requestFocus />
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/day_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_date" />

        <CheckBox
            android:id="@+id/time_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_time" />

     </LinearLayout>

        <TextView
            android:id="@+id/filename_result_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/filename_error_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#BF9191"
            android:text="" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/seekbar_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "0"
            android:text="@string/compression_label" />

        <SeekBar
            android:id="@+id/compressionSeekbar"
            android:layout_width="match_parent"
            android:layout_weight = "1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/seekbar_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "0"
            android:text="@string/high_label" />

    </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/images_label"
            android:padding="10dp"
            android:background="#2ecc71"
            android:textColor="#ecf0f1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toLeftOf="@id/tvText2"
            android:background="#2ecc71"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@id/tvText2"
            android:background="#2ecc71"
            />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/no_image_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_image_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/add_more_image_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@mipmap/outline_add_circle_black_24"
                android:gravity="end" />

        </LinearLayout>


        <ListView
            android:id="@+id/image_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true" />

    </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>